--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,14 @@ node_js:
 install:
   - npm install
 before_script:
-  - export COVERAGE_TOKEN=$COVERAGE_TOKEN
-  - export HEROKU_TOKEN=$HEROKU_TOKEN
+  - export CODE_COVERAGE_TOKEN=$CODE_COVERAGE_TOKEN
+  - export HEROKU_KEY=$HEROKU_KEY
 script:
   - npm run write-coveralls
   - npm test
+deploy:
+  provider: heroku
+  api_key: $HEROKU_KEY
+  app: roundtable-backend
+  on: master 
+  strategy: git
